--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   fluttertoast: ^3.1.3
   date_format: ^1.0.8
+  provider: ^3.1.0+1
+  equatable:
 
 
 dev_dependencies:
